--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -1,57 +1,43 @@
 .home-container-desktop {
-    margin: 0;
-    width: 100vw;
+    margin: 0 auto;
+    width: 90vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    // background-color: yellow;
-
-    // @media (max-width: #{$screen-lg}) {
-    //     display: none;
-    // }
     
     .images-container {
-        width: 90%;
+        margin: 0 25px;
+        width: 100vw;
         display: flex;
         justify-content: center;
-        li {
-            height: 100%;
-            margin-top: 20px;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            list-style-type: none;
+        flex-direction: column;
 
-        h1 {
-            font-family: $font;
-        }
+            li {
+                height: 100%;
+                margin: 20px 0;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                list-style-type: none;
 
-        h5 {
-            margin: 10px 0px;
-        }
+            h1 {
+                font-family: $font;
+                font-weight: 600;
+                font-size: 1.2em;
+                letter-spacing: .05em;
+            }
+            
+            h5 {
+                margin: 10px 0px;
+                letter-spacing: .05em;
+            }
 
-        img{
-            width: 100%;
+            img{
+                width: 90%;
+            }
         }
     }
 }
-}
 
-// .images-container-mobile {
-//     width: 100vw;
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-
-//     @media (min-width: #{$screen-lg}) {
-//         display: none;
-//     }
-
-//     .mobile-images {
-//         width: 90%;
-//         margin-top: 15px;
-//     }
-// }
 
