--- a/src/Components/AboutMobile/_AboutMobile.scss
+++ b/src/Components/AboutMobile/_AboutMobile.scss
@@ -1,14 +1,21 @@
 .about-container-mobile {
     width: 100%;
-    height: 100%;
-    padding: 0px 15px 15px 15px;
+    padding: 0px 30px 200px 30px;
     background-color: $background-color;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
+    
+    @media (min-width: 769px) {
+        height: 100vh;
+        padding: 0 100px 200px 100px;
+        flex-direction: row;
+        align-items: flex-start;
+    }
 
     .sunny-portrait-mobile {
+        margin: 0 25px;
         width: 350px;
         border-radius: 40px;
 
@@ -44,6 +51,10 @@
 
         .artist-educator-mobile {
             text-align: center;
+
+            @media (min-width: 768px) {
+               text-align: left;
+            }
         }
 
         h3 {
