--- a/src/Components/ExhibitionMobile/_ExhibitionMobile.scss
+++ b/src/Components/ExhibitionMobile/_ExhibitionMobile.scss
@@ -1,12 +1,17 @@
 .exhibition-container-mobile {
     width: 100%;
-    height: 100%;
-    padding: 0px 15px 15px 15px;
+    padding: 0px 15px 250px 15px;
     background-color: $background-color;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
+
+    @media (min-width: 769px) {
+        padding: 0 0 0 125px;
+        height: 100%;
+        align-items: flex-start;
+    }
     
     .awards-container-mobile {
         width: 100%;
@@ -59,7 +64,6 @@
             line-height: 20px;
             letter-spacing: 1.5px;
             text-transform: uppercase;
-            // list-style-type: none;
         }
     }
 }
