--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -27,8 +27,14 @@
             }
             
             h5 {
+                width: 100%;
                 margin: 10px 0px;
+                padding: 0 40px;
+                display: flex;
+                justify-content: center;
+                text-align: center;
                 letter-spacing: .05em;
+                line-height: 1.4;
             }
 
             img{
