--- a/src/Components/Exhibition/_Exhibition.scss
+++ b/src/Components/Exhibition/_Exhibition.scss
@@ -1,4 +1,4 @@
-.exhibition-container-mobile {
+.exhibition-container {
     width: 100%;
     padding: 0px 15px 250px 15px;
     background-color: $background-color;
@@ -7,13 +7,13 @@
     flex-direction: column;
     align-items: center;
 
-    @media (min-width: 769px) {
+    @media (min-width: $screen-md) {
         padding: 0 0 0 125px;
         height: 100%;
         align-items: flex-start;
     }
     
-    .awards-container-mobile {
+    .awards-container {
         width: 100%;
         padding-left: 10px;
     
@@ -40,8 +40,8 @@
         }
     }
 
-    .exhibition-history-mobile {
-        @extend .awards-container-mobile;
+    .exhibition-history {
+        @extend .awards-container;
 
         h3 {
             margin-top: 15px;
