--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -395,6 +395,11 @@ header {
                 background: none;
                 border: none;
                 padding: 0;
+                
+                @media (max-width: #{$screen-xl}) {
+                    margin-left: 10px;;
+                    padding-top: 2px; 
+                 }
 
                 
                 
@@ -416,6 +421,11 @@ header {
                 background: none;
                 border: none;
                 padding: 0;
+                
+                @media (max-width: #{$screen-xl}) {
+                    margin-left: 10px;;
+                    padding-top: 2px; 
+                 }
                 
             }
             .exhibitionsBtn:hover {
