--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -5,6 +5,11 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    .gallery-title {
+        margin: 40px 0;
+        font-size: 2.5em;
+    }
     
     .images-container {
         display: flex;
@@ -20,6 +25,7 @@
                 list-style-type: none;
 
             h1 {
+                text-align: center;
                 font-family: $font;
                 font-weight: 600;
                 font-size: 1.2em;
