--- a/src/App.scss
+++ b/src/App.scss
@@ -20,8 +20,7 @@ $screen-xl: 1235px;
 @import './Components/About/About';
 @import './Components/Exhibition/Exhibition';
 
-// @import './Components/Paintings/Paintings2006/Paintings2006';
-
+@import './Components/PageNotFound/PageNotFound';
 
 // html {
 //     background-color: green;
