--- a/src/Components/Exhibition/_Exhibition.scss
+++ b/src/Components/Exhibition/_Exhibition.scss
@@ -1,16 +1,18 @@
 .exhibition-container {
     width: 100%;
-    padding: 0px 15px 250px 15px;
+    padding: 0 15px 250px 15px;
     background-color: $background-color;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
 
-    @media (min-width: $screen-md) {
+    @media (min-width: 1025px) {
         height: 100vh;
-        padding: 0 0 0 125px;
+        padding: 0 150px 0 150px;
         align-items: flex-start;
+        justify-content: center;
+        flex-direction: row-reverse;
     }
     
     .awards-container {
@@ -20,7 +22,7 @@
         h3 {
             margin-top: 15px;
             font-family: $font;
-            line-height: 20px;
+            line-height: 30px;
             letter-spacing: 1.5px;
             font-size: 1em;
             color: rgb(100, 100, 100);
@@ -34,7 +36,7 @@
             font-family: $font;
             font-size: .8em;
             color: $font-color-grey;
-            line-height: 20px;
+            line-height: 30px;
             letter-spacing: 1.5px;
             text-transform: uppercase;
         }
@@ -46,7 +48,7 @@
         h3 {
             margin-top: 15px;
             font-family: $font;
-            line-height: 20px;
+            line-height: 30px;
             letter-spacing: 1.5px;
             font-size: 1em;
             color: rgb(100, 100, 100);
@@ -61,7 +63,7 @@
             font-family: $font;
             font-size: .8em;
             color: $font-color-grey;
-            line-height: 20px;
+            line-height: 30px;
             letter-spacing: 1.5px;
             text-transform: uppercase;
         }
