--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -1,6 +1,7 @@
 .home-container-desktop {
     margin: 0 auto;
     width: 100vw;
+    max-width: 1920px;
     display: flex;
     justify-content: center;
     align-items: center;
