--- a/src/Components/Footer/_Footer.scss
+++ b/src/Components/Footer/_Footer.scss
@@ -13,32 +13,40 @@ footer {
         position: relative;
     }
 
-    // @media (max-width: 1200px) {
-    //     position: relative;
-    // }
-
-
     .footer-content{
         width: 100%;
         height: 50px;
         padding-top: 5px;
         display: flex;
         justify-content: center;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         overflow: visible;
         position: relative;
+        
+        @media (max-width: #{$screen-sm}) {
+            flex-direction: column;
+        }   
+
         h1{
-            margin-top: 5px;
+            margin: 5px 0 0 20px;
             letter-spacing: .15em;
-            font-size: .7em;
+            font-size: .9em;
             font-family: $font;
             font-weight: bold;
             color: rgb(25, 25, 25);
 
             @media (max-width: #{$screen-sm}) {
-                font-size: 9px;
+                font-size: .7em;
             }          
+        }
+
+        .separator {
+            display: inline-block;
+            
+            @media (max-width: #{$screen-sm}) {
+                display: none;
+            }
         }
     }
         .danlubbers, a{
