--- a/src/Components/PageNotFound/_PageNotFound.scss
+++ b/src/Components/PageNotFound/_PageNotFound.scss
@@ -4,9 +4,17 @@
     display:flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    text-align: center;
 
     .page-not-found-text {
+        margin: 25px 0;
         font-family: $font;
         font-size: 3em;
+    }
+
+    .page-not-found-paragraph {
+        font-family: $font;
+        font-size: 2em;
     }
 }
