--- a/src/Components/PageNotFound/_PageNotFound.scss
+++ b/src/Components/PageNotFound/_PageNotFound.scss
@@ -8,13 +8,24 @@
     text-align: center;
 
     .page-not-found-text {
-        margin: 25px 0;
+        margin: 25px;
         font-family: $font;
-        font-size: 3em;
+        font-size: 1.5em;
+        line-height: 1.2em;
+        
+        @media (min-width: #{$screen-lg}) {
+            font-size: 3em;
+        }
     }
-
+    
     .page-not-found-paragraph {
+        margin: 25px;
         font-family: $font;
-        font-size: 2em;
+        font-size: 1em;
+        line-height: 1.2em;
+
+        @media (min-width: #{$screen-lg}) {
+            font-size: 2em;
+        }
     }
 }
