Small changes and build folder added

--- a/src/Components/Home/_Home.scss
+++ b/src/Components/Home/_Home.scss
@@ -10,6 +10,7 @@
     .gallery-title {
         margin: 40px 0;
         font-size: 2.5em;
+        font-family: $font;
     }
     
     .images-container {
