fixed overflow issue for about and exhibition on lower res screens and got rid of apple-logo.png files causing errors

--- a/src/Components/Exhibition/_Exhibition.scss
+++ b/src/Components/Exhibition/_Exhibition.scss
@@ -6,6 +6,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    overflow: auto;
 
     @media (min-width: 1025px) {
         height: 100vh;
