--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -80,15 +80,17 @@ header {
                     padding: 0;
                     // background-color: red;
                     
+                    
                     li {
                         @extend .mobile-text-content;
                         display: flex;
                         justify-content: center;
                         margin: 20px 0px 10px 0px;
                         font-size: 1em;
-                        color: rgb(125, 125, 125);
                         
-                       
+                        .link {
+                            color: $font-color-grey;
+                        }
                     }
                 }
                 
@@ -143,7 +145,7 @@ header {
       @media (max-width: #{$screen-lg}) {
         display: none;
     }
-        ul {
+        .nav-container {
             margin: 0;
             padding-top: 25px;
             display: flex;
@@ -189,7 +191,7 @@ header {
             position: absolute;
             top: -250px;
             left: -10px;
-            transition: .15 ease-in-out;
+            transition: .15s ease-in-out;
             opacity: 0;
             transition-property: opacity;
             z-index: -1;
@@ -203,7 +205,12 @@ header {
                 font-size: 1em;
                 cursor: pointer;
 
+                .desktop-link {
+                    color: $font-color-grey;
+                }
+
             }
+
            }
 
            .slide-painting-position {
@@ -249,7 +256,7 @@ header {
                 position: absolute;
                 top: -250px;
                 left: 118px;
-                transition: .15 ease-in-out;
+                transition: .15s ease-in-out;
                 opacity: 0;
                 transition-property: opacity;
                 z-index: -1;
@@ -266,6 +273,10 @@ header {
                     margin: 10px 5px 10px 0px;
                     font-size: 1em;
                     cursor: pointer;
+
+                    .desktop-link {
+                        color: $font-color-grey;
+                    }
                 }
                }
     
@@ -314,7 +325,7 @@ header {
                     position: absolute;
                     top: -250px;
                     left: 210px;
-                    transition: .15 ease-in-out;
+                    transition: .15s ease-in-out;
                     opacity: 0;
                     transition-property: opacity;
                     z-index: -1;
@@ -331,6 +342,10 @@ header {
                         margin: 10px 5px 10px 0px;
                         font-size: 1em;
                         cursor: pointer;
+
+                        .desktop-link {
+                            color: $font-color-grey;
+                        }
                     }
                 }
         
