--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -20,6 +20,7 @@ header {
     .hamburgerBtn {
         display: none;
         font-size: 2em;
+        padding: 0;
         border: none;
         cursor: pointer;
         background: transparent;
